# AI-Math-Assistant

./: .gitignore  COMPLETION_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  INSTALLATION.md  PROJECT_DELIVERY_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  chat_export_20260522_124007.txt  chat_export_20260526_105421.txt  main.py  requirements.txt  setup.cfg  setup.py
data/: chat_history.json  training_data.json
gui/: __init__.py  app.py
models/: __init__.py  ml_model.py
utils/: __init__.py  calculator.py  equation_solver.py  graph_plotter.py  history_manager.py  learning_manager.py  statistics_manager.py
